src/main/resources/edu/wpi/punchy_pegasi/frontend/css/PathfindingMap.css
.pathfinding-overlay {
    -fx-spacing: 10;
    -fx-padding: 20;
}

.pathfinding-overlay-box {
    -fx-alignment: CENTER;
    -fx-max-width: 300;
    -fx-spacing: 10;
    -fx-padding: 10;
    -fx-background-color: -pfx-background;
    -fx-background-radius: 12;
    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.40), 20, 0, 0.0, 0.0);
}

.pathfinding-overlay-box Label {
    -fx-text-fill: -pfx-text;
}

.pathfinding-overlay-box > HBox {
    -fx-spacing: 10;
    -fx-alignment: CENTER;
    -fx-padding: 5;
}

.pathfinding-direction-box {
    -fx-alignment: CENTER;
    -fx-max-width: 300;
    -fx-spacing: 10;
    -fx-padding: 10;
    -fx-background-color: -pfx-background;
    -fx-background-radius: 12;
    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.40), 20, 0, 0.0, 0.0);
}



/*.pathfinding-direction-box > HBox {*/
/*    -fx-spacing: 10;*/
/*    -fx-alignment: CENTER;*/
/*    -fx-padding: 5;*/
/*}*/

.pathfinding-direction-inner-box{
    -fx-background-color: transparent;
    -fx-spacing: 10;
}

.pathfinding-direction-scroll-pane {
    -fx-background-color: transparent;
    -fx-border-color: transparent;
}

.pathfinding-direction-scroll-pane .scroll-bar:vertical {
    -fx-background-color: transparent;
}

.pathfinding-direction-scroll-pane .scroll-bar:vertical .track {
    -fx-background-color: transparent;
}

.pathfinding-direction-scroll-pane > .viewport {
    -fx-background-color: transparent;
}

.pathfinding-direction-overlay {
    -fx-spacing: 10;
    -fx-padding: 20;
    -fx-max-height: 500;
}
.pathfinding-direction-overlay Label {
    -fx-text-fill: -pfx-text;
}

.pathfinding-direction-overlay PFXIcon {
    -fx-fill: -pfx-text;
}

.pathfinding-direction-box:hover {
    -fx-background-color: -pfx-background-transparent;
}
.pathfinding-direction-box:hover Label {
    -fx-text-fill: black;
}
.pathfinding-direction-box:hover PFXIcon {
    -fx-fill: black;
}

.pathfinding-overlay .pfx-button {
    -pfx-button-background: -pfx-accent;
    -pfx-button-text: -pfx-text-opposite;
}

.pathfinding-overlay .pfx-button-cancel {
    -pfx-button-background: -pfx-danger;
    -pfx-button-text: -pfx-text;
}

